Implemeted Favourites RecyclerView - Complete

--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -22,14 +22,14 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/historyImage"
+                android:id="@+id/listImage"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_gravity="center"
                 android:layout_margin="20dp" />
 
             <TextView
-                android:id="@+id/historyText"
+                android:id="@+id/listText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
