--- a/app/src/main/res/layout/single_item_activity.xml
+++ b/app/src/main/res/layout/single_item_activity.xml
@@ -633,11 +633,11 @@
                     app:layout_constraintVertical_bias="0.0">
 
                     <Button
-                        android:id="@+id/favorties_button_single"
+                        android:id="@+id/favourties_button_single"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="4dp"
-                        android:text="Favorites"
+                        android:text="Favourites"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.498"
                         app:layout_constraintStart_toStartOf="parent"
