--- a/app/src/main/res/layout/activity_choose_favourites.xml
+++ b/app/src/main/res/layout/activity_choose_favourites.xml
@@ -12,31 +12,29 @@
 
 
     <TextView
-        android:id="@+id/history_title"
+        android:id="@+id/favourites_title"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:text="Choose an item from your history"
-        android:textSize="20dp"
-        android:gravity="center"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
+        android:gravity="center"
+        android:text="Choose an item from your favourites"
+        android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/view">
-    </TextView>
+        app:layout_constraintTop_toBottomOf="@+id/view"></TextView>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/historyRecyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:id="@+id/favouritesRecyclerView"
+        android:layout_width="407dp"
+        android:layout_height="525dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.888"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/history_title"
-        app:layout_constraintVertical_bias="0.13" />
+        app:layout_constraintTop_toBottomOf="@+id/favourites_title"
+        app:layout_constraintVertical_bias="1.0" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
