--- a/app/src/main/res/layout/activity_database_add.xml
+++ b/app/src/main/res/layout/activity_database_add.xml
@@ -7,7 +7,7 @@
     tools:context=".DatabaseAddActivity">
 
     <include
-        layout="@layout/header"
+        layout="@layout/grocereaseheader"
         android:id="@+id/view">
 
     </include>
