--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -5,88 +5,108 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
     <ImageView
         android:id="@+id/user_imageView"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+        android:layout_width="105dp"
+        android:layout_height="108dp"
         android:gravity=""
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.024"
+        app:layout_constraintVertical_bias="0.069"
         tools:srcCompat="@tools:sample/avatars" />
 
-    <View
-        android:id="@+id/divider2"
-        android:layout_width="409dp"
-        android:layout_height="1dp"
-        android:layout_marginTop="46dp"
-        android:layout_marginBottom="588dp"
-        android:background="?android:attr/listDivider"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/user_imageView"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <Button
-        android:id="@+id/favourites_button"
+    <LinearLayout
+        android:id="@+id/profile_buttons_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="156dp"
-        android:layout_marginEnd="18dp"
-        android:text="Favourites"
-        app:layout_constraintEnd_toStartOf="@+id/profile_button"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/profile_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="156dp"
-        android:text="Profile"
+        android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.698"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/username_textview">
+
+        <Button
+            android:id="@+id/favourites_button"
+            android:layout_width="126dp"
+            android:layout_height="36dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="4dp"
+            android:background="@android:color/transparent"
+            android:padding="0dp"
+            android:text="Favourites"
+            android:textAllCaps="false"
+            android:textColor="#B3B3B3"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toStartOf="@+id/profile_button"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/username_textview" />
+
+        <Button
+            android:id="@+id/profile_button"
+            android:layout_width="91dp"
+            android:layout_height="36dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="4dp"
+            android:background="@android:color/transparent"
+            android:padding="0dp"
+            android:text="Profile"
+            android:textAllCaps="false"
+            android:textColor="#01A358"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.446"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/username_textview" />
+
+    </LinearLayout>
+
     <View
-        android:id="@+id/divider"
-        android:layout_width="409dp"
-        android:layout_height="1dp"
-        android:layout_marginTop="72dp"
-        android:background="?android:attr/listDivider"
+        android:id="@+id/profile_line"
+        android:layout_width="match_parent"
+        android:layout_height="3dp"
+        android:layout_marginTop="-13dp"
+        android:background="#01A358"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/divider2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/divider2"
-        app:layout_constraintVertical_bias="0.009" />
+        app:layout_constraintTop_toBottomOf="@+id/profile_buttons_layout"
+        app:layout_constraintVertical_bias="0.025" />
 
     <TextView
         android:id="@+id/username_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView"
-        app:layout_constraintBottom_toTopOf="@+id/divider2"
+        android:textColor="#000000"
+        android:layout_marginTop="5dp"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/user_imageView"
         app:layout_constraintVertical_bias="0.521" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/edit_button"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
+        android:layout_marginTop="3dp"
+        android:background="#01A358"
         android:text="edit"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.049"
+        app:layout_constraintHorizontal_bias="0.507"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.976" />
+        app:layout_constraintTop_toBottomOf="@+id/card2"
+        app:layout_constraintVertical_bias="0.049" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/card1"
@@ -99,7 +119,7 @@
         app:cardElevation="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/divider">
+        app:layout_constraintTop_toBottomOf="@+id/profile_line">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -115,7 +135,7 @@
                 android:layout_height="24dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-
+                android:textColor="#000000"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
                 android:text="Blood Sugar Level:"
@@ -130,6 +150,7 @@
             <TextView
                 android:id="@+id/textView10"
                 android:layout_width="134dp"
+                android:textColor="#000000"
                 android:layout_height="24dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
@@ -140,7 +161,7 @@
                 android:textAlignment="inherit"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.031"
+                app:layout_constraintHorizontal_bias="0.028"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/textView1"
                 app:layout_constraintVertical_bias="1.0" />
@@ -152,6 +173,7 @@
                 android:layout_marginTop="4dp"
                 android:text="Health Indicators"
                 android:textAlignment="gravity"
+                android:textColor="#000000"
                 android:textSize="16dp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -165,7 +187,7 @@
                 android:layout_height="24dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-
+                android:textColor="#000000"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
                 android:text="Blood Pressure:"
@@ -183,7 +205,7 @@
                 android:layout_height="24dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-
+                android:textColor="#000000"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
                 android:text="BP"
@@ -201,7 +223,7 @@
                 android:layout_height="24dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-
+                android:textColor="#000000"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
                 android:text="BSL"
@@ -219,7 +241,7 @@
                 android:layout_height="24dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-
+                android:textColor="#000000"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
                 android:text="Cholesterol"
@@ -241,7 +263,7 @@
         android:layout_width="398dp"
         android:layout_height="116dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="-45dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="130dp"
         app:cardCornerRadius="10dp"
@@ -249,7 +271,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/divider">
+        app:layout_constraintTop_toBottomOf="@+id/card1">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -265,10 +287,10 @@
                 android:layout_height="23dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-
                 android:layout_marginEnd="8dp"
                 android:text="G"
                 android:textAlignment="inherit"
+                android:textColor="#000000"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.953"
@@ -282,10 +304,10 @@
                 android:layout_height="23dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-
                 android:layout_marginEnd="8dp"
                 android:text="Goal:"
                 android:textAlignment="inherit"
+                android:textColor="#000000"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.63"
@@ -299,10 +321,10 @@
                 android:layout_height="23dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-
                 android:layout_marginEnd="8dp"
                 android:text="S"
                 android:textAlignment="inherit"
+                android:textColor="#000000"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.953"
@@ -316,10 +338,10 @@
                 android:layout_height="23dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-
                 android:layout_marginEnd="8dp"
                 android:text="B"
                 android:textAlignment="inherit"
+                android:textColor="#000000"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.953"
@@ -333,10 +355,10 @@
                 android:layout_height="23dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-
                 android:layout_marginEnd="8dp"
                 android:text="N"
                 android:textAlignment="inherit"
+                android:textColor="#000000"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.281"
@@ -350,10 +372,10 @@
                 android:layout_height="23dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-
                 android:layout_marginEnd="8dp"
                 android:text="H"
                 android:textAlignment="inherit"
+                android:textColor="#000000"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.281"
@@ -368,6 +390,7 @@
                 android:layout_marginTop="4dp"
                 android:text="Personal Details"
                 android:textAlignment="gravity"
+                android:textColor="#000000"
                 android:textSize="16dp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -381,10 +404,10 @@
                 android:layout_height="23dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-
                 android:layout_marginEnd="8dp"
                 android:text="Height:"
                 android:textAlignment="inherit"
+                android:textColor="#000000"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.025"
@@ -398,10 +421,10 @@
                 android:layout_height="23dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-
                 android:layout_marginEnd="8dp"
                 android:text="Weight"
                 android:textAlignment="inherit"
+                android:textColor="#000000"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.025"
@@ -415,10 +438,10 @@
                 android:layout_height="23dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-
                 android:layout_marginEnd="8dp"
                 android:text="Name:"
                 android:textAlignment="inherit"
+                android:textColor="#000000"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.025"
@@ -432,10 +455,10 @@
                 android:layout_height="23dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-
                 android:layout_marginEnd="8dp"
                 android:text="Birthday:"
                 android:textAlignment="inherit"
+                android:textColor="#000000"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.63"
@@ -449,10 +472,10 @@
                 android:layout_height="23dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-
                 android:layout_marginEnd="8dp"
                 android:text="W"
                 android:textAlignment="inherit"
+                android:textColor="#000000"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.281"
@@ -466,10 +489,10 @@
                 android:layout_height="23dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-
                 android:layout_marginEnd="8dp"
                 android:text="Gender:"
                 android:textAlignment="inherit"
+                android:textColor="#000000"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.63"
@@ -481,9 +504,6 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.cardview.widget.CardView>
-
-
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
