--- a/app/src/main/res/layout/single_item_activity.xml
+++ b/app/src/main/res/layout/single_item_activity.xml
@@ -7,14 +7,14 @@
     <!--take note: as we need to call each line by id to set the corresponding value, find a away to do this, if not have to create each unique textbox for each value-->
     <include
         android:id="@+id/include"
-        layout="@layout/header" />
+        layout="@layout/grocereaseheader" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/food_card_view_1"
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="16dp"
         app:cardCornerRadius="8dp"
         app:cardElevation="10dp"
@@ -26,7 +26,7 @@
 
         <ImageView
             android:id="@+id/card1_foodImage_ImageView"
-            android:layout_width="90dp"
+            android:layout_width="180dp"
             android:layout_height="140dp"
             android:layout_marginTop="50dp"
             android:layout_gravity="center_horizontal"
@@ -67,8 +67,9 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="16dp"
+        android:layout_marginBottom="10dp"
         app:cardCornerRadius="8dp"
         app:cardElevation="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -78,9 +79,9 @@
         app:layout_constraintTop_toBottomOf="@+id/food_card_view_1">
 
         <ScrollView
-            android:fillViewport="true"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:fillViewport="true">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -370,8 +371,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="25sp"
                     android:layout_marginHorizontal="13dp"
-                    android:orientation="horizontal"
                     android:background="#F2F2F2"
+                    android:orientation="horizontal"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.576"
@@ -510,8 +511,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="25sp"
                     android:layout_marginHorizontal="13dp"
-                    android:orientation="horizontal"
                     android:background="#F2F2F2"
+                    android:orientation="horizontal"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.576"
@@ -670,8 +671,6 @@
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </ScrollView>
-
-
 
 
     </androidx.cardview.widget.CardView>
