--- a/app/src/main/res/drawable/logo.xml
+++ b/app/src/main/res/drawable/logo.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
 
-    <item android:drawable="@drawable/circle"/>
     <item android:drawable="@drawable/ic_launcher_background"/>
+    <item android:drawable="@drawable/logo_white"
+        android:gravity="center"
+        android:height="50dp"
+        android:width="50dp"/>
+
 
 </layer-list>
