--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -6,24 +6,41 @@
     android:layout_height="match_parent">
 
 
-    <ImageView
+    <androidx.cardview.widget.CardView
         android:id="@+id/user_imageView"
-        android:layout_width="105dp"
-        android:layout_height="108dp"
-        android:gravity=""
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        app:cardCornerRadius="250dp"
+        app:cardBackgroundColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.069"
-        tools:srcCompat="@tools:sample/avatars" />
+        app:layout_constraintVertical_bias="0.069">
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            app:cardCornerRadius="250dp"
+            android:layout_gravity="center">
+
+            <ImageView
+                android:id="@+id/photo"
+                android:layout_width="120dp"
+                android:layout_height="120dp"
+                android:src="@drawable/person"
+                android:scaleType="centerCrop"/>
+
+        </androidx.cardview.widget.CardView>
+
+    </androidx.cardview.widget.CardView>
 
     <LinearLayout
         android:id="@+id/profile_buttons_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="2dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -71,7 +88,7 @@
         android:id="@+id/profile_line"
         android:layout_width="match_parent"
         android:layout_height="3dp"
-        android:layout_marginTop="-13dp"
+        android:layout_marginTop="-10dp"
         android:background="#01A358"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -84,15 +101,14 @@
         android:id="@+id/username_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:text="TextView"
         android:textColor="#000000"
-        android:layout_marginTop="5dp"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/user_imageView"
-        app:layout_constraintVertical_bias="0.521" />
+        app:layout_constraintTop_toBottomOf="@+id/user_imageView" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/edit_button"
@@ -263,7 +279,7 @@
         android:layout_width="398dp"
         android:layout_height="116dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="-45dp"
+        android:layout_marginTop="-30dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="130dp"
         app:cardCornerRadius="10dp"
