--- a/app/src/main/res/layout/grocereaseheader.xml
+++ b/app/src/main/res/layout/grocereaseheader.xml
@@ -18,6 +18,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.457"
-        tools:src="@drawable/grocerease_white" />
+        android:src="@drawable/grocerease_white" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
